2013-07-13  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-exhibit): Handle ido-enter-matching-directory before
	ido-set-matches call.  (Bug#6852)

2013-07-12  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-percent-literals-beg-re):
	(ruby-syntax-expansion-allowed-p): Support array of symbols, for
	Ruby 2.0.
	(ruby-font-lock-keywords): Distinguish calls to functions with
	module-like names from module references.  Highlight character
	literals.

2013-07-12  Sergio Durigan Junior  <sergiodj@riseup.net>  (tiny change)

	* progmodes/gdb-mi.el (gdb-strip-string-backslash): New function.
	(gdb-send): Handle continued commands.  (Bug#14847)

2013-07-12  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop--v2s): Remove unused local variable.
	(desktop-save-buffer): Make defvar-local; adjust docstring.
	(desktop-auto-save-timeout, desktop-owner): Use ignore-errors.
	(desktop-clear, desktop-save-buffer-p): Use string-match-p.

2013-07-12  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/map-ynp.el (map-y-or-n-p): Fix last change.

2013-07-12  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (next-line, previous-line): Document TRY-VSCROLL and ARG.
	(Bug#14842)

2013-07-12  Glenn Morris  <rgm@gnu.org>

	* doc-view.el: Require cl-lib at runtime too.
	(doc-view-remove-if): Remove.
	(doc-view-search-next-match, doc-view-search-previous-match):
	Use cl-remove-if.

	* edmacro.el: Require cl-lib at runtime too.
	(edmacro-format-keys, edmacro-parse-keys): Use cl-mismatch, cl-subseq.
	(edmacro-mismatch, edmacro-subseq): Remove.

	* shadowfile.el: Require cl-lib.
	(shadow-remove-if): Remove.
	(shadow-set-cluster, shadow-shadows-of-1, shadow-remove-from-todo):
	Use cl-remove-if.

	* wid-edit.el: Require cl-lib.
	(widget-choose): Use cl-remove-if.
	(widget-remove-if): Remove.

	* progmodes/ebrowse.el: Require cl-lib at runtime too.
	(ebrowse-delete-if-not): Remove.
	(ebrowse-browser-buffer-list, ebrowse-member-buffer-list)