@@ -1,3 +1,8 @@
+2013-07-13  Fabián Ezequiel Gallina  <fgallina@gnu.org>
+
+	* progmodes/python.el (python-imenu--build-tree): Fix corner case
+	in nested defuns.
+
 2013-07-13  Leo Liu  <sdl.web@gmail.com>
 
 	* ido.el (ido-exhibit): Handle ido-enter-matching-directory before
